# cmake-cpu-detect

./: .gitignore  CMakeLists.txt  DetectHostArch.cmake  LICENSE  README.md  avx2.cpp  cpu_detect.cmake  neon.c
.github/workflows/: ci.yml
